# geod

./: .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: angle.rs  coord.rs  lib.rs  utils.rs
src/angle/: common.rs  consts.rs  dd.rs  degree.rs  dms_dd.rs
src/coord/: lat.rs  lon.rs  mod.rs  point.rs
types/: Cargo.toml
types/src/: lib.rs  utils.rs
types/src/angle/: dd.rs  degree.rs  dms_dd.rs  errors.rs  mod.rs
types/src/coord/: lat.rs  lon.rs  mod.rs  point.rs
