[package]
name = "geod-types"
description = "Geodesy types and primitives"
authors = ["Ivan L <tsionyx@gmail.com>"]
license = "MIT"
keywords = ["geodesy", "cartography"]
readme = "./README.md"
version = "0.1.1"
repository = "https://github.com/tsionyx/geod"
edition = "2021"
categories = ["science"]


[dependencies]
regex = { version = "0.1", package = "regex-lite" }
lazy_static = "1.4"
num-traits = "0.2"

[dependencies.serde]
version = "1.0"
optional = true
features = ["derive"]
